--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               <p class="grey-text text-lighten-4">Amagerfælledvej 56<br>
                 2300 København S
               </p>
-              <p class="grey-text text-lighten-4"><a href="mailto:info@symbolia.com">info@symbolia.com</a></p>
+              <p class="grey-text text-lighten-4"><a href="mailto:info@symbolia.eu">info@symbolia.eu</a></p>
             </div>
             <div class="col s6 right-align">
               <img src="http://www.widgit.com/widgit_branding/widgit_logo.png" alt="Widgit Logo" width="250" /><br>
