--- a/index.html
+++ b/index.html
@@ -6,17 +6,44 @@
     <title>Symbolia</title>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
       <link rel="stylesheet" href="symbolia.css">
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css" media="screen" charset="utf-8">
 
+      <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+      <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+      <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+      <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+      <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+      <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+      <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+      <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+      <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+      <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+      <link rel="manifest" href="/manifest.json">
+      <meta name="msapplication-TileColor" content="#ffffff">
+      <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+      <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <div class="container">
       <nav>
         <div class="nav-wrapper white">
           <a href="/" class="brand-logo"><img src="images/logos/symbolia_web_logo1.png" alt="Symbolia Logo" class="brand-logo-img" /></a>
+          <a href="#" data-activates="mobile-symbolia-nav" class="button-collapse"><i class="material-icons grey-text text-darken-2">menu</i></a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="#inform_me">Få besked når Symbolia åbner</a></li>
             <li><a href="#products">Produkter</a></li>
+          </ul>
+          <ul class="side-nav" id="mobile-symbolia-nav">
+            <li><a href="#products"><strong>Produkter</strong></a>
+                <li><a href="#products">SymWriter 2</a></li>
+                <li><a href="#inprint">In Print 2</a></li>
+                <li><a href="#widgit-online">Widgit Online</a></li>
+                <li><a href="#widgit-go">Widgit Go</a></li>
+            </li>
           </ul>
         </div>
       </nav>
@@ -79,8 +106,8 @@
       </div>
       <div class="row">
 
-        <div class="col s12 m6">
-          <div class="card z-depth-2">
+        <div class="col s12 m12 l6">
+          <div class="card z-depth-2" id="symwriter">
             <div class="card-image">
             <img src="images/material_product_icons/symwriter.png" alt="SymWriter icon" />
             <span class="large-card-title card-title">SymWriter 2<span class="card-subtitle">Kommuniker: Symbolskrivning</span></span>
@@ -102,8 +129,8 @@
           </div>
         </div>
 
-        <div class="col s12 m6">
-          <div class="card z-depth-2">
+        <div class="col s12 m12 l6">
+          <div class="card z-depth-2" id="inprint">
             <div class="card-image">
             <img src="images/material_product_icons/in_print.png" alt="In Print 2 icon" />
             <span class="large-card-title card-title">In Print 2<span class="card-subtitle">Kommuniker: På Tryk 2</span></span>
@@ -123,8 +150,10 @@
             </div>
           </div>
         </div>
-        <div class="col s12 m6">
-          <div class="card z-depth-2">
+      </div>
+      <div class="row">
+        <div class="col s12 m12 l6">
+          <div class="card z-depth-2" id="widgit-online">
             <div class="card-image">
             <img src="images/material_product_icons/widgit_online.png" alt="Widgit Online icon" />
             <span class="large-card-title card-title">Widgit Online</span>
@@ -144,8 +173,8 @@
             </div>
           </div>
         </div>
-        <div class="col s12 m6">
-          <div class="card z-depth-2">
+        <div class="col s12 m12 l6">
+          <div class="card z-depth-2" id="widgit-go">
             <div class="card-image">
             <img src="images/material_product_icons/widgit_go.png" alt="Widgit Go icon" />
             <span class="large-card-title card-title">Widgit Go</span>
@@ -171,14 +200,19 @@
       <footer class="page-footer blue darken-4">
         <div class="container">
           <div class="row">
-            <div class="col s6">
+            <div class="col s12 m6">
               <h5 class="white-text">Symbolia IVS</h5>
               <p class="grey-text text-lighten-4">Amagerfælledvej 56<br>
                 2300 København S
               </p>
               <p class="grey-text text-lighten-4"><a href="mailto:info@symbolia.eu">info@symbolia.eu</a></p>
             </div>
-            <div class="col s6 right-align">
+            <div class="col s12 m6 hide-on-med-and-up">
+              <br>
+              <img src="http://www.widgit.com/widgit_branding/widgit_logo.png" alt="Widgit Logo" width="250" /><br>
+              <p class="grey-text text-lighten-4"><a href="https://www.widgit.com">widgit.com</a></p>
+            </div>
+            <div class="col s12 m6 right-align hide-on-small-only">
               <img src="http://www.widgit.com/widgit_branding/widgit_logo.png" alt="Widgit Logo" width="250" /><br>
               <p class="grey-text text-lighten-4"><a href="https://www.widgit.com">widgit.com</a></p>
             </div>
@@ -194,13 +228,15 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+    <script type="text/javascript">
+      $(".button-collapse").sideNav();
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
     <script src="mailchecker.js" charset="utf-8"></script>
     <script type="text/javascript">
       // var siteReadyDate = new Date(2016, 3, 4, 12, 0);
       // $('#symbolia_ready_countdown').countdown({until: siteReadyDate});
-      // Should use this instead of google backed document.
-      // http://www.fizerkhan.com/blog/posts/Startup-Landing-Pages-with-Firebase.html
       // countdown(
       //   new Date(),
       //   function(ts) {
@@ -248,15 +284,15 @@
         return false;
       }
     </script>
-  <script>
+    <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  
+
     ga('create', 'UA-75117040-1', 'auto');
     ga('send', 'pageview');
-  
+
   </script>
   </body>
 </html>
