Fix widgit logo

--- a/index.html
+++ b/index.html
@@ -209,11 +209,11 @@
             </div>
             <div class="col s12 m6 hide-on-med-and-up">
               <br>
-              <img src="http://www.widgit.com/widgit_branding/widgit_logo.png" alt="Widgit Logo" width="250" /><br>
+              <img src="/images/logos/widgit_white_text_logo.png" alt="Widgit Logo" width="200" /><br>
               <p class="grey-text text-lighten-4"><a href="https://www.widgit.com">widgit.com</a></p>
             </div>
             <div class="col s12 m6 right-align hide-on-small-only">
-              <img src="http://www.widgit.com/widgit_branding/widgit_logo.png" alt="Widgit Logo" width="250" /><br>
+              <img src="/images/logos/widgit_white_text_logo.png" alt="Widgit Logo" width="200" /><br>              
               <p class="grey-text text-lighten-4"><a href="https://www.widgit.com">widgit.com</a></p>
             </div>
           </div>
