--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
               </ul>
             </div>
             <div class="card-action">
-              <a href="http://www.widgit.com/symwriter">Læs mere om SymWriter 2</a><br>
-              <a href="http://download.widgit.com/symwriter/">Prøv SymWriter 2 gratis i 21 dage!</a>
+              <a href="http://download.widgit.com/symwriter/">Prøv SymWriter 2 gratis i 21 dage!</a><br><br>
+              <a href="http://www.widgit.com/symwriter">Læs mere om SymWriter 2 (Engelsk)</a>
             </div>
           </div>
         </div>
@@ -146,7 +146,7 @@
               </ul>
             </div>
             <div class="card-action">
-              <a href="http://www.widgit.com/inprint">Læs mere om In Print 2</a>
+              <a href="http://www.widgit.com/inprint">Læs mere om In Print 2 (Engelsk)</a>
             </div>
           </div>
         </div>
@@ -169,7 +169,7 @@
               </ul>
             </div>
             <div class="card-action">
-              <a href="http://www.widgit.com/products/widgit-online">Læs mere om Widgit Online</a>
+              <a href="http://www.widgit.com/products/widgit-online">Læs mere om Widgit Online (Engelsk)</a>
             </div>
           </div>
         </div>
@@ -190,7 +190,7 @@
               </ul>
             </div>
             <div class="card-action">
-              <a href="http://www.widgit.com/products/widgit-go">Læs mere om Widgit Go</a>
+              <a href="http://www.widgit.com/products/widgit-go">Læs mere om Widgit Go (Engelsk)</a>
             </div>
 
           </div>
