--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
           <a href="/" class="brand-logo"><img src="images/logos/symbolia_web_logo1.png" alt="Symbolia Logo" class="brand-logo-img" /></a>
           <a href="#" data-activates="mobile-symbolia-nav" class="button-collapse"><i class="material-icons grey-text text-darken-2">menu</i></a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="#inform_me">Få besked når Symbolia åbner</a></li>
+            <!-- <li><a href="#inform_me">Få besked når Symbolia åbner</a></li> -->
+            <li><a href="#contact">Kontakt os</a></li>
             <li><a href="#products">Produkter</a></li>
           </ul>
           <ul class="side-nav" id="mobile-symbolia-nav">
+            <li><a href="#contact">Kontakt os</a></li>
             <li><a href="#products"><strong>Produkter</strong></a>
                 <li><a href="#products">SymWriter 2</a></li>
                 <li><a href="#inprint">In Print 2</a></li>
@@ -60,45 +62,6 @@
         </div>
       </div>
       <br>
-      <div class="row">
-        <div class="col s12">
-          <h2 id="inform_me">Giv mig besked, når Symbolia åbner</h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col s12">
-          <div class="z-depth-2 signupform_holder">
-          <p>&nbsp;</p>
-          <p id="signupError" class="signup-message-field red-text text-darken-2 red lighten-5 center-align" style="display: none;"></p>
-          <p id="signupSuccess" class="signup-message-field green-text text-darken-2 green lighten-5 center-align" style="display: none;"></p>
-          <form id="signup-form" class="signup-form" onsubmit="return signUp(this)">
-            <div class="row">
-              <div class="input-field col s10 offset-s1">
-                <i class="material-icons prefix">account_circle</i>
-                <input id="name" type="text" class="validate">
-                <label for="name">Navn</label>
-              </div>
-            </div>
-            <div class="row">
-              <div class="input-field col s10 offset-s1">
-                <i class="material-icons prefix">email</i>
-                <input id="email" type="email" class="validate">
-                <label for="email" data-error="Ugyldig e-mail adresse" data-success=":-)">Email</label>
-              </div>
-            </div>
-            <div class="row">
-              <div class="input-field col s10 offset-s1">
-                <button class="btn waves-effect waves-light" type="submit" name="action" id="signupButton">Tilmeld
-                  <i class="material-icons right">send</i>
-                </button>
-              </div>
-            </div>
-          </form>
-          <p>&nbsp;</p>
-          </div>
-        </div>
-      </div>
-      <p>&nbsp;</p>
       <div class="row">
         <div class="col s12">
           <h2 id="products">Produkter</h2>
@@ -197,23 +160,65 @@
         </div>
 
       </div>
+
+      <p>&nbsp;</p>
+      <div class="row">
+        <div class="col s12">
+          <h2 id="inform_me">Giv mig besked, når den nye hjemmeside er klar</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12">
+          <div class="z-depth-2 signupform_holder">
+          <p>&nbsp;</p>
+          <p id="signupError" class="signup-message-field red-text text-darken-2 red lighten-5 center-align" style="display: none;"></p>
+          <p id="signupSuccess" class="signup-message-field green-text text-darken-2 green lighten-5 center-align" style="display: none;"></p>
+          <form id="signup-form" class="signup-form" onsubmit="return signUp(this)">
+            <div class="row">
+              <div class="input-field col s10 offset-s1">
+                <i class="material-icons prefix">account_circle</i>
+                <input id="name" type="text" class="validate">
+                <label for="name">Navn</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s10 offset-s1">
+                <i class="material-icons prefix">email</i>
+                <input id="email" type="email" class="validate">
+                <label for="email" data-error="Ugyldig e-mail adresse" data-success=":-)">Email</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s10 offset-s1">
+                <button class="btn waves-effect waves-light" type="submit" name="action" id="signupButton">Tilmeld
+                  <i class="material-icons right">send</i>
+                </button>
+              </div>
+            </div>
+          </form>
+          <p>&nbsp;</p>
+          </div>
+        </div>
+      </div>
+
       <footer class="page-footer blue darken-4">
         <div class="container">
           <div class="row">
             <div class="col s12 m6">
-              <h5 class="white-text">Symbolia IVS</h5>
+              <h5 id="contact" class="white-text">Symbolia IVS</h5>
               <p class="grey-text text-lighten-4">Amagerfælledvej 56<br>
                 2300 København S
               </p>
-              <p class="grey-text text-lighten-4"><a href="mailto:info@symbolia.eu">info@symbolia.eu</a></p>
+              <p class="grey-text text-lighten-4"><i class="tiny material-icons">email</i>&nbsp;&nbsp;<a href="mailto:info@symbolia.eu">info@symbolia.eu</a></p>
+              <p class="grey-text text-lighten-4"><i class="tiny material-icons">phone</i>&nbsp;&nbsp;<a href="tel:+4571992219">71 99 22 19</a></p>
             </div>
             <div class="col s12 m6 hide-on-med-and-up">
               <br>
-              <img src="/images/logos/widgit_white_text_logo.png" alt="Widgit Logo" width="200" /><br>
+              <img src="./images/logos/widgit_white_text_logo.png" alt="Widgit Logo" width="200" /><br>
               <p class="grey-text text-lighten-4"><a href="https://www.widgit.com">widgit.com</a></p>
             </div>
             <div class="col s12 m6 right-align hide-on-small-only">
-              <img src="/images/logos/widgit_white_text_logo.png" alt="Widgit Logo" width="200" /><br>              
+              <img src="./images/logos/widgit_white_text_logo.png" alt="Widgit Logo" width="200" /><br>
               <p class="grey-text text-lighten-4"><a href="https://www.widgit.com">widgit.com</a></p>
             </div>
           </div>
