--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
       <br>
       <div class="row">
         <div class="col s12">
+          <h2 id="products">Ferie</h2>
+          <p class="xlarge-font">Grundet ferieafvikling er telefonen ikke bemandet i perioden 4.juli til og med 14.juli.
+            <br><br>
+            Skriv eventuelt en e-mail til <a href="mailto:info@symbolia.com">info@symbolia.com</a>
+            <p>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col s12">
           <h2 id="products">Produkter</h2>
         </div>
       </div>
