--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
       </div>
       <br>
-      <div class="row">
+      <div class="row hide">
         <div class="col s12">
           <h2 id="products">Ferie</h2>
           <p class="xlarge-font">Grundet ferieafvikling er telefonen ikke bemandet i perioden 21.juli til og med 27.juli.
