--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@
           <div class="row">
             <div class="col s12 m6">
               <h5 id="contact" class="white-text">Symbolia IVS</h5>
-              <p class="grey-text text-lighten-4">Amagerfælledvej 56<br>
-                2300 København S
+              <p class="grey-text text-lighten-4">Slotsgade 52E<br>
+                3400 Hillerød
               </p>
-              <p class="grey-text text-lighten-4"><i class="tiny material-icons">email</i>&nbsp;&nbsp;<a href="mailto:info@symbolia.eu">info@symbolia.eu</a></p>
+              <p class="grey-text text-lighten-4"><i class="tiny material-icons">email</i>&nbsp;&nbsp;<a href="mailto:info@symbolia.com">info@symbolia.com</a></p>
               <p class="grey-text text-lighten-4"><i class="tiny material-icons">phone</i>&nbsp;&nbsp;<a href="tel:+4571992219">71 99 22 19</a></p>
             </div>
             <div class="col s12 m6 hide-on-med-and-up">
@@ -239,7 +239,7 @@
         </div>
         <div class="footer-copyright">
           <div class="container">
-          © 2016 Symbolia IVS
+          © 2017 Symbolia IVS
           </div>
         </div>
       </footer>
