--- a/index.html
+++ b/index.html
@@ -218,6 +218,11 @@
       <footer class="page-footer blue darken-4">
         <div class="container">
           <div class="row">
+            <div class="col s12 m12">
+              <a href="https://download.normedia.no/download/91/PaTryk2_2_80_685_dk.msi">In Print 2 Download</a>
+            </div>
+          </div>
+          <div class="row">
             <div class="col s12 m6">
               <h5 id="contact" class="white-text">Symbolia IVS</h5>
               <p class="grey-text text-lighten-4">Slotsgade 52E<br>
