--- a/index.html
+++ b/index.html
@@ -220,6 +220,8 @@
           <div class="row">
             <div class="col s12 m12">
               <a href="https://download.normedia.no/download/91/PaTryk2_2_80_685_dk.msi">In Print 2 Download</a>
+              <br>
+              <a href="https://download.normedia.no/download/86/DK_Gennem_Valg_1_40_685.msi">Gennem Valg Download</a>
             </div>
           </div>
           <div class="row">
