--- a/index.html
+++ b/index.html
@@ -234,6 +234,9 @@
             <div class="col s12 m6 right-align hide-on-small-only">
               <img src="./images/logos/widgit_white_text_logo.png" alt="Widgit Logo" width="200" /><br>
               <p class="grey-text text-lighten-4"><a href="https://www.widgit.com">widgit.com</a></p>
+              <br>
+              <br>
+              <a href="https://download.normedia.no/download/94/TeamViewerQS.exe">Remote support</a>
             </div>
           </div>
         </div>
