--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         </div>
         <div class="footer-copyright">
           <div class="container">
-          © 2017 Symbolia IVS
+          © 2017-2018 Symbolia IVS
           </div>
         </div>
       </footer>
