--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               </ul>
             </div>
             <div class="card-action">
-              <a href="http://download.widgit.com/symwriter/">Prøv SymWriter 2 gratis i 21 dage!</a><br><br>
+              <a href="https://www.widgit.com/dk/support/index.htm">Download seneste version!</a><br><br>
               <a href="http://www.widgit.com/symwriter">Læs mere om SymWriter 2 (Engelsk)</a>
             </div>
           </div>
@@ -242,7 +242,7 @@
         </div>
         <div class="footer-copyright">
           <div class="container">
-          © 2017-2020 Symbolia IVS
+          © 2017-2021 Symbolia IVS
           </div>
         </div>
       </footer>
